account interface changes

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
-       <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/jpg" href="https://api.yworld3.com/storage/posts/1/yworld3_20220214192251_79795_thumb.jpg"/>
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="icon" type="image/png" href="https://api.yworld3.com/storage/app/public/icon-48.png"/>
+    <link rel="apple-touch-icon" href="https://api.yworld3.com/storage/app/public/icon-192.png" />
+    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-48.png" sizes="48x48" />
+    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-96.png" sizes="96x96" />
+    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-144.png" sizes="144x144" />
+    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-192.png" sizes="192x192" />
+    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-256.png" sizes="256x256" />
+    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-512.png" sizes="512x512" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
     <title>Your World 3.0</title>
-  </head>
-  <body style="margin: 0">
+</head>
+<body style="margin: 0">
 
-    <div id="root"></div>
+<div id="root"></div>
 
-  </body>
+</body>
 </html>
