--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="icon" type="image/png" href="https://api.yworld3.com/storage/app/public/icon-48.png"/>
-    <link rel="apple-touch-icon" href="https://api.yworld3.com/storage/app/public/icon-192.png" />
-    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-48.png" sizes="48x48" />
-    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-96.png" sizes="96x96" />
-    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-144.png" sizes="144x144" />
-    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-192.png" sizes="192x192" />
-    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-256.png" sizes="256x256" />
-    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-512.png" sizes="512x512" />
+<!--    <link rel="icon" type="image/png" href="https://api.yworld3.com/storage/app/public/icon-48.png"/>-->
+<!--    <link rel="apple-touch-icon" href="https://api.yworld3.com/storage/app/public/icon-192.png" />-->
+<!--    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-48.png" sizes="48x48" />-->
+<!--    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-96.png" sizes="96x96" />-->
+<!--    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-144.png" sizes="144x144" />-->
+<!--    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-192.png" sizes="192x192" />-->
+<!--    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-256.png" sizes="256x256" />-->
+<!--    <link rel="icon" href="https://api.yworld3.com/storage/app/public/icon-512.png" sizes="512x512" />-->
+    <link rel="icon" type="image/png" href="./assets/icon-blue-48.png"/>
+    <link rel="apple-touch-icon" href="./assets/icon-blue-192.png" />
+    <link rel="icon" href="./assets/icon-blue-48.png" sizes="48x48" />
+    <link rel="icon" href="./assets/icon-blue-96.png" sizes="96x96" />
+    <link rel="icon" href="./assets/icon-blue-144.png" sizes="144x144" />
+    <link rel="icon" href="./assets/icon-blue-192.png" sizes="192x192" />
+    <link rel="icon" href="./assets/icon-blue-256.png" sizes="256x256" />
+    <link rel="icon" href="./assets/icon-blue-512.png" sizes="512x512" />
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
     <title>Your World 3.0</title>
 </head>
